--- a/css/content.css
+++ b/css/content.css
@@ -119,6 +119,7 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .game-container a{
@@ -130,9 +131,14 @@ body{
     background: -webkit-linear-gradient(#1bb3da, #1382cc);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    
     font-weight: bold;
     text-decoration: none;
+}
+
+.game-container p:hover{
+    background: -webkit-linear-gradient(#ffff, #ffff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .game-container p::after{
@@ -215,7 +221,7 @@ body{
     font-size: 24px;
     font-weight: 300;
     position: relative;
-    content: "Status: Open";
+    content: "Status: Close";
     display: inline-block;
 }
 
